FIX: Steps with tooltips z-index bug

--- a/docs/css/spectre.css
+++ b/docs/css/spectre.css
@@ -2378,7 +2378,7 @@ textarea.form-input {
   transition: transform .2s ease;
   transition: -webkit-transform .2s ease;
   white-space: nowrap;
-  z-index: 99;
+  z-index: 999;
 }
 .tooltip:focus::after,
 .tooltip:hover::after {
